# ph

./: .clang-format  .clangd  .gitignore  .nvimignore  CMakeLists.txt  README.md  build-all-debug.sh  ph_buffer.h  ph_config.in.h  ph_constant_size.h  ph_date_and_time.c  ph_date_and_time.h  ph_func_utility.c  ph_func_utility.h  ph_function_date_and_time.c  ph_function_date_and_time.h  ph_function_utility.c  ph_function_utility.h  ph_numeric.h  ph_result.h  ph_size.h  ph_string.h  ph_type_string.h  ph_utility.c  ph_utility.h
ph/inc/ph/: buffer.h  date_and_time.h  numeric.h  result.h  size.h  string.h  utility.h
ph/src/ph/: date_and_time.c  utility.c
